# YAMCC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  vulkan.c
src/glad/: vulkan.h
